Allow to specify a directory for all generated class files